--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,1021 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    border: none;
-    outline: none;
-    scroll-behavior: smooth;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+  font-family: "Libre Franklin", serif;
 }
 :root {
-    --bg-color: #111111;
-    --second-bg-color: #151515;
-    --text-color: white;
-    --main-color: #7b00b6;
+  --bg-color: #111111;
+  --second-bg-color: #151515;
+  --text-color: white;
+  --main-color: #4278ff;
 }
 
 html {
-    font-size: 55.5%;
-    overflow-x: hidden;
+  font-size: 55%;
+  overflow-x: hidden;
 }
 
 body {
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    background-image: url(...img/backgroundimg.png);
+  color: var(--text-color);
+  background: linear-gradient(2deg, #2c51a3 0%, #1d356b 0%, #000000 75.52%);
 }
 
-img {
-    position: fixed;
+span {
+  color: var(--main-color);
+  text-align: center;
 }
+
+/* ↓ Custom Scrollbar ↓ */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--second-bg-color);
+  width: 50px;
+}
+/* ↑ Custom Scrollbar ↑ */
 
 /* Halaman Pertama */
-/* Bagian Navbar */
+/* ↓ Animasi Background Halaman Home dan Hobi ↓ */
+.wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.box div {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-color: transparent;
+  border: 6px solid rgba(55, 76, 158, 0.8);
+}
+
+.box div:nth-child(1) {
+  top: 30%;
+  left: 20%;
+  animation: animate 10s linear infinite;
+}
+
+.box div:nth-child(2) {
+  top: 70%;
+  left: 50%;
+  animation: animate 7s linear infinite;
+}
+
+.box div:nth-child(3) {
+  top: 17%;
+  left: 6%;
+  animation: animate 9s linear infinite;
+}
+
+.box div:nth-child(4) {
+  top: 20%;
+  left: 70%;
+  animation: animate 10s linear infinite;
+}
+
+.box div:nth-child(5) {
+  top: 67%;
+  left: 10%;
+  animation: animate 6s linear infinite;
+}
+
+.box div:nth-child(6) {
+  top: 80%;
+  left: 80%;
+  animation: animate 12s linear infinite;
+}
+
+.box div:nth-child(7) {
+  top: 45%;
+  left: 75%;
+  animation: animate 15s linear infinite;
+}
+
+.box div:nth-child(8) {
+  top: 32%;
+  left: 85%;
+  animation: animate 16s linear infinite;
+}
+
+.box div:nth-child(9) {
+  top: 90%;
+  left: 42%;
+  animation: animate 9s linear infinite;
+}
+
+.box div:nth-child(10) {
+  top: 60%;
+  left: 90%;
+  animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(2) translateY(-60px) rotate(360deg);
+    opacity: 0;
+  }
+}
+/* ↑ Animasi Background Halaman Home dan Hobi ↑ */
+
+/* ↓ Bagian Navbar ↓ */
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 3rem 11%;
-    background: rgba( 0, 0, 0, 0.6);
-    backdrop-filter: blur(10px);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 3rem 11%;
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-    font-size: 3rem;
-    color: var(--text-color);
-    font-weight: 650;
-    cursor: pointer;
-    transition: 0.3s ease-out
+  font-size: 3rem;
+  color: var(--text-color);
+  font-weight: 800;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
+
+.logo span {
+  color: var(--main-color);
+}
+
 .logo:hover {
-    transform: scale(1.2);
+  transform: scale(1.1);
+}
+
+.navbar a span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-bottom: 3px solid var(--main-color);
+  border-radius: 15px;
+  transform: scale(1) translateY(10px);
+  transition: 0.5s;
+}
+
+.navbar a:hover span {
+  transform: scale(1) translateY(0);
+  background-color: var(--main-color);
 }
 
 .navbar a {
-    font-size: 1.8rem;
-    color: var(--text-color);
-    margin-left: 4rem;
-    transition: 0.3s ease-out;
+  position: relative;
+  text-decoration: none;
+  padding: 4px 3mm;
+  font-size: 1.8rem;
+  color: var(--text-color);
+  margin-left: 2rem;
+  font-weight: 600;
+  transition: 0.3s ease-in-out;
+}
+
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--main-color);
+  display: none;
+}
+/* ↑ Bagian Navbar ↑ */
+
+/* Isi Home */
+/* ↓ Posisi Home ↓ */
+section {
+  min-height: 100vh;
+  padding: 10rem 9% 10rem;
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.home-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 3rem;
+  z-index: 1;
+}
+/* ↑ Posisi Home ↑ */
+
+/* ↓ Bagian Teks dan Tentang Saya ↓ */
+
+.home-content h3 {
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  font-size: 3.5rem;
+}
+
+.home-content h1 {
+  font-size: 5rem;
+  font-weight: 700;
+  margin-top: 2rem;
+  line-height: 1;
+}
+/* ↑ Bagian Teks Nama dan Tentang Saya ↑ */
+
+/* ↓ Bagian Gambar ↓ */
+
+.home-img img {
+  position: relative;
+  top: 3rem;
+  width: 20vw;
+  border-radius: 20%;
+  box-shadow: 0 0 25px var(--main-color);
+  transition: 0.4s ease-in-out;
+}
+
+.home-img img:hover {
+  box-shadow: 0 0 50px var(--main-color), 0 0 55px var(--main-color);
+}
+/* ↑ Bagian Gambar ↑ */
+
+/* ↓ Bagian Teks Dekskripsi Home ↓ */
+.home-content p {
+  font-size: 2rem;
+  font-weight: 500;
+  max-width: 1000px;
+  padding-bottom: 10px;
+}
+
+/* ↑ Bagian Teks Dekskripsi Home ↑ */
+
+/* Halaman Kedua */
+/* ↓ Animasi Background Halaman 2 ↓ */
+.wrapper2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.rectangle div {
+  position: absolute;
+  width: 300px;
+  height: 20px;
+  background-color: transparent;
+  border: solid rgba(50, 87, 230, 0.8);
+}
+
+.rectangle div:nth-child(1) {
+  top: 30%;
+  left: 185%;
+  animation: animate2 8s linear infinite;
+}
+
+.rectangle div:nth-child(2) {
+  top: 70%;
+  left: 190%;
+  animation: animate2 9s linear infinite;
+}
+
+.rectangle div:nth-child(3) {
+  top: 40%;
+  left: 138%;
+  animation: animate2 5s linear infinite;
+}
+
+.rectangle div:nth-child(4) {
+  top: 20%;
+  left: 127%;
+  animation: animate2 6s linear infinite;
+}
+
+.rectangle div:nth-child(5) {
+  top: 67%;
+  left: 145%;
+  animation: animate2 7s linear infinite;
+}
+
+.rectangle div:nth-child(6) {
+  top: 80%;
+  left: 180%;
+  animation: animate2 5s linear infinite;
+}
+
+.rectangle div:nth-child(7) {
+  top: 45%;
+  left: 175%;
+  animation: animate2 10s linear infinite;
+}
+
+.rectangle div:nth-child(8) {
+  top: 50%;
+  left: 160%;
+  animation: animate2 8s linear infinite;
+}
+
+.rectangle div:nth-child(9) {
+  top: 65%;
+  left: 155%;
+  animation: animate2 6s linear infinite;
+}
+
+.rectangle div:nth-child(10) {
+  top: 60%;
+  left: 120%;
+  animation: animate2 4s linear infinite;
+}
+
+@keyframes animate2 {
+  from {
+    transform: translateX(-10000px);
+  }
+
+  to {
+    transform: translateX(1000px);
+  }
+}
+/* ↑ Animasi Background Halaman 2 dan 5 ↑ */
+
+/* ↓ Pembungkus Halaman 2 ↓ */
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+  padding-top: 15rem;
+}
+/* ↑ Pembungkus Halaman 2 ↑ */
+
+/* ↓ Gambar Halaman 2 ↓ */
+.profile-img img {
+  position: relative;
+  width: 25vw;
+  border-radius: 20%;
+  box-shadow: 0 0 50px var(--main-color);
+  transition: 0.4s ease-in-out;
+}
+/* ↑ Gambar Halaman 2 ↑ */
+
+/* ↓ Isi Teks Halaman 2 ↓ */
+.heading {
+  font-size: 4rem;
+  margin-top: 100px;
+}
+
+.profile h2 span {
+  text-shadow: 0 0 25px var(--main-color);
+}
+
+.profile-img img:hover {
+  box-shadow: 0 0 50px var(--main-color), 0 0 55px var(--main-color);
+}
+
+.profile-content {
+  z-index: 1;
+}
+
+.profile-content .heading {
+  text-align: justify;
+  font-size: 6rem;
+  margin-left: 15rem;
+}
+
+.profile-content h2 {
+  text-align: left;
+  line-height: 1.5;
+  margin-top: -25rem;
+  padding-top: 20rem;
+}
+
+.profile-content h3 {
+  font-size: 2.5rem;
+}
+
+.profile-content p {
+  font-size: 3rem;
+  margin: 2rem;
+  text-align: left;
+}
+/* ↑ Isi Teks Halaman 2 ↑ */
+
+/* ↓ Halaman Ketiga ↓ */
+.pendidikan {
+  color: var(--text-color);
+}
+
+.pendidikan h2 {
+  margin-bottom: 5rem;
+  color: var(--text-color);
+  text-align: center;
+}
+
+.pendidikan h2 span {
+  text-shadow: 0 0 25px var(--main-color);
+}
+
+.pendidikan-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 2.5rem;
+}
+
+.pendidikan-box {
+  background-color: var(--main-color);
+  color: var(--bg-color);
+  height: 250px;
+  border-radius: 3rem;
+  transition: 0.3s ease-in-out;
+  z-index: 1;
+}
+
+.pendidikan-box:hover {
+  background-color: var(--second-bg-color);
+  color: var(--main-color);
+  transform: scale(1.03);
+  z-index: 1;
+}
+
+.pendidikan-box .pendidikan-info {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: center;
+  justify-content: center;
+  max-height: 200px;
+  align-items: baseline;
+  padding: 5em;
+}
+
+.pendidikan-info h4 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.pendidikan p {
+  font-size: 2rem;
+  font-weight: 400;
+  max-height: 100px;
+}
+
+/* ↓ Background Animasi Halaman 3 ↓ */
+.wrapper3 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.wavey div {
+  position: absolute;
+  width: 100px;
+  height: 20px;
+  background-color: rgba(50, 87, 230, 0.5);
+  border: rgba(50, 87, 230, 0.5);
+}
+
+.wavey div:nth-child(1) {
+  top: 45%;
+  left: 0%;
+  animation: bouncein 2s infinite 2s;
+}
+
+.wavey div:nth-child(2) {
+  top: 50%;
+  left: 0%;
+  animation: bounceout 2s infinite 2s;
+}
+
+.wavey div:nth-child(3) {
+  top: 55%;
+  left: 0%;
+  animation: bouncein 2s infinite 2s;
+}
+
+.wavey div:nth-child(4) {
+  top: 60%;
+  left: 0%;
+  animation: bounceout 2s infinite 2s;
+}
+
+.wavey div:nth-child(5) {
+  top: 65%;
+  left: 0%;
+  animation: bouncein 2s infinite 2s;
+}
+
+.wavey div:nth-child(6) {
+  top: 45%;
+  right: 0%;
+  animation: bouncein2 2s infinite 2s;
+}
+
+.wavey div:nth-child(7) {
+  top: 50%;
+  right: 0%;
+  animation: bounceout2 2s infinite 2s;
+}
+
+.wavey div:nth-child(8) {
+  top: 55%;
+  right: 0%;
+  animation: bouncein2 2s infinite 2s;
+}
+
+.wavey div:nth-child(9) {
+  top: 60%;
+  right: 0%;
+  animation: bounceout2 2s infinite 2s;
+}
+
+.wavey div:nth-child(10) {
+  top: 65%;
+  right: 0%;
+  animation: bouncein2 2s infinite 2s;
+}
+
+@keyframes bouncein {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  40% {
+    transform: translateX(-30px);
+  }
+  60% {
+    transform: translateX(-15px);
+  }
+}
+
+@keyframes bouncein2 {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  40% {
+    transform: translateX(30px);
+  }
+  60% {
+    transform: translateX(15px);
+  }
+}
+
+@keyframes bounceout {
+  0%,
+  30%,
+  60%,
+  90%,
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(-30px);
+  }
+  70% {
+    transform: translateX(-15px);
+  }
+}
+
+@keyframes bounceout2 {
+  0%,
+  30%,
+  60%,
+  90%,
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(30px);
+  }
+  70% {
+    transform: translateX(15px);
+  }
+}
+/* ↑ Background Animasi Halaman 3 ↑ */
+/* ↑ Halaman Ketiga ↑ */
+
+/* ↓ Halaman Keempat ↓ */
+.hobi {
+  color: var(--text-color);
+  padding: 2rem;
+}
+
+.hobi h2 {
+  margin-bottom: 3rem;
+  color: var(--text-color);
+  text-align: center;
+  font-size: 4rem;
+}
+
+.hobi h2 span {
+  text-shadow: 0 0 15px var(--main-color);
+}
+
+.hobi-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2rem;
+  padding: 0 2rem;
+}
+
+.hobi-box {
+  background-color: var(--main-color);
+  color: var(--bg-color);
+  border-radius: 20px;
+  padding: 1.5rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  z-index: 1;
+}
+
+.hobi-box:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.hobi-box .hobi-info {
+  text-align: center;
+  z-index: 1;
+}
+
+.hobi-info h4 {
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.hobi-info p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+video {
+  width: 100%;
+  border-radius: 15px;
+  margin-top: 1rem;
+}
+/* ↑ Halaman Keempat ↑ */
+
+/* ↓ Halaman Kelima ↓ */
+.kontak {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 2rem;
+  z-index: 1;
+}
+
+.kontak h2 {
+  margin-bottom: 3rem;
+  color: white;
+  text-align: center;
+  font-size: 5rem;
+  z-index: 1;
+}
+
+.kontak h2 span {
+  color: var(--main-color);
+  text-shadow: 0 0 15px var(--main-color);
+  z-index: 1;
+}
+
+.kontak form {
+  width: 100%;
+  max-width: 70rem;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+}
+
+.kontak form .input-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.kontak form .input-box input,
+.kontak form textarea {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  color: white;
+  border-radius: 1rem;
+  border: 2px solid #4278ff;
+  margin: 0.5rem 0;
+  resize: none;
+}
+
+.kontak form textarea {
+  min-height: 15rem;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1rem 2.8rem;
+  background: #4278ff;
+  border-radius: 4rem;
+  font-size: 1.6rem;
+  color: white;
+  border: 2px solid transparent;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+  margin-top: 2rem;
+  z-index: 1;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 25px #4278ff;
+}
+/* ↑ Halaman Kelima ↑ */
+
+/* ↓ Footer ↓ */
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  padding: 20px 0;
+  background-color: var(--bg-color);
+}
+
+.footer .copyright {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 3rem;
+  color: var(--text-color);
+}
+
+.copyright span {
+  text-shadow: 0 0 15px var(--main-color);
+}
+/* ↑ Footer ↑ */
+
+/* Media Queries */
+@media (max-width: 1285px) {
+  html {
+    font-size: 45%;
+  }
+
+  .home-img img {
+    position: relative;
+    top: 3rem;
+    width: 25vw;
+    border-radius: 20%;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.4s ease-in-out;
+  }
+
+  .home-content h3 {
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 4rem;
+  }
+  
+  .home-content h1 {
+    font-size: 6rem;
+    font-weight: 700;
+    margin-top: 2rem;
+    line-height: 1;
+  }
+
+  .profile-img img {
+    position: relative;
+    width: 22vw;
+    border-radius: 20%;
+    box-shadow: 0 0 50px var(--main-color);
+    transition: 0.4s ease-in-out;
+  }
+
+  .profile-content .heading {
+    position: relative;
+    margin-left: 37rem;
+    font-size: 4rem;
+  }
+
+  .profile-content p {
+    text-align: center;
+  }
+
+  .pendidikan-box {
+    background-color: var(--main-color);
+    margin-top: 11rem;
+    color: var(--bg-color);
+    height: 250px;
+    border-radius: 3rem;
+    transition: 0.3s ease-in-out;
+    z-index: 1;
+  }
+
+  .kontak form {
+    width: 100%;
+    max-width: 90rem;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+  }
+}
+
+@media (max-width: 991px) {
+  header {
+    padding: 2rem 3%;
+  }
+
+  section {
+    padding: 10rem 3% 2rem;
+  }
+
+  footer {
+    padding: 2rem 3%;
+  }
+
+  .home-img img {
+    position: relative;
+    top: 3rem;
+    width: 30vw;
+    border-radius: 20%;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.4s ease-in-out;
+  }
+
+  .home-content h3 {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    font-size: 3rem;
+  }
+  
+  .home-content h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    margin-top: 2rem;
+    line-height: 1;
+  }
+
+  .profile-content .heading {
+    position: absolute;
+    font-size: 4rem;
+  }
+
+  .profile-content p {
+    text-align: right;
+  }
+
+  .wrapper3 {
+    display: none;
+  }
+
+  .pendidikan-box {
+    height: 200px;
+  }
+}
+
+@media (max-width:895px) {
+  .header {
+  background-color: var(--bg-color);
+  }
+
+  #menu-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 50%;
+    padding: 1rem 3%;
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(20px);
+    border-left: 2px solid var(--main-color);
+    border-bottom: 2px solid var(--main-color);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+    color: white;
+  }
+
+  .navbar a span {
+    display: none;
+  }
+}
+
+@media (max-width: 665px) {
+  .profile-img img {
+    width: 25vw;
+    margin-right: 5rem;
+  }
+
+  .profile-content .heading {
+    text-align: center;
+    font-size: 4rem;
+    margin-left: 15rem;
+    padding-bottom: 5rem;
+  }
+  
+  .profile-content h3 {
+    font-size: 2.5rem;
+    padding-top: 2rem;
+  }
+
+  .pendidikan-box {
+    height: 270px;
+  }
+
+  .hobi-container {
+    grid-template-columns: repeat(1,1fr);
+  }
+}
+
+@media (max-width: 460px) {
+
+  .profile-img img {
+    display: none;
+  }
+
+  .profile-content {
+    z-index: 1;
+  }
+  
+  .profile-content .heading {
+    font-size: 5rem;
+    margin-left: 15rem;
+  }
+  
+  .profile-content h3 {
+    font-size: 1rem;
+  }
+  
+  .profile-content p {
+    font-size: 16px;
+    text-align: center;
+    margin-right: -8rem;
+  }
+
+.pendidikan-container {
+  display: flex ;
+  flex-direction: column;
+  }
+
+  .pendidikan-box {
+    background-color: var(--main-color);
+    color: var(--bg-color);
+    height: 150px;
+    border-radius: 3rem;
+    transition: 0.3s ease-in-out;
+    z-index: 1;
+  }
 }
